components/Navbar/Navbar.module.scss
@import "./styles/variables";
@import "./styles/mediaQuery";

.navbar {
  text-align: center;
  width: 100%;
  height: 11vh;
  position: fixed;
  top: 0;
  background-color: $dark-background;

  color: $font-secondary;
  font-size: 1.5rem;
  line-height: 38px;
  z-index: 10000;
}
.navbar__nav {
  height: 100%;
  width: 100%;
  max-width: 1450px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.navbar__logo {
  margin: 10px 0 0 20px;
  &:hover {
    cursor: pointer;
  }
}
.navbar__navlist {
  max-width: 800px;
  width: 50%;
  height: 100%;
  margin-right: 20px;
  list-style: none;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.navbar__navitem {
  &:hover {
    cursor: pointer;
    color: $font-primary-hover;
  }
  &_blue {
    display: flex;
    align-items: center;
    background-color: $font-secondary;
    color: $font-primary;
    height: 100%;
    padding: 0 15px;
  }
}

/*Hamburger*/

.hamburger {
  padding: 15px 15px;
  display: none;
  cursor: pointer;
  transition-property: opacity, filter;
  transition-duration: 0.15s;
  transition-timing-function: linear;
  font: inherit;
  color: inherit;
  text-transform: none;
  background-color: transparent;
  border: 0;
  margin: 0;
  overflow: visible;
}
.hamburger:hover {
  opacity: 0.7;
}
.hamburger.is-active:hover {
  opacity: 0.7;
}
.hamburger.is-active .hamburger-inner,
.hamburger.is-active .hamburger-inner::before,
.hamburger.is-active .hamburger-inner::after {
  background-color: #00d3ff;
}

.hamburger-box {
  width: 40px;
  height: 24px;
  display: inline-block;
  position: relative;
}

.hamburger-inner {
  display: block;
  top: 50%;
  margin-top: -2px;
}
.hamburger-inner,
.hamburger-inner::before,
.hamburger-inner::after {
  width: 40px;
  height: 4px;
  background-color: #00d3ff;
  border-radius: 4px;
  position: absolute;
  transition-property: transform;
  transition-duration: 0.15s;
  transition-timing-function: ease;
}
.hamburger-inner::before,
.hamburger-inner::after {
  content: "";
  display: block;
}
.hamburger-inner::before {
  top: -10px;
}
.hamburger-inner::after {
  bottom: -10px;
}
.hamburger--squeeze .hamburger-inner {
  transition-duration: 0.075s;
  transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
}
.hamburger--squeeze .hamburger-inner::before {
  transition: top 0.075s 0.12s ease, opacity 0.075s ease;
}
.hamburger--squeeze .hamburger-inner::after {
  transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

.hamburger--squeeze.is-active .hamburger-inner {
  transform: rotate(45deg);
  transition-delay: 0.12s;
  transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
}
.hamburger--squeeze.is-active .hamburger-inner::before {
  top: 0;
  opacity: 0;
  transition: top 0.075s ease, opacity 0.075s 0.12s ease;
}
.hamburger--squeeze.is-active .hamburger-inner::after {
  bottom: 0;
  transform: rotate(-90deg);
  transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
}

// Mobile

@mixin mobile-navbar {
  height: 90vh;
  width: 60%;
  margin: 0;
  padding: 10px 15px 70px 20px;
  background-color: rgba(33, 33, 33, 0.9);
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  right: 0px;
  top: 100px;
  z-index: 1;
  transform: translateX(100%);
  transition: transform 100ms ease-in;
}

@include for-phone-only {
  .navbar {
    height: 100px;
    &__navlist {
      @include mobile-navbar;
    }
  }
  .navbar__navlist_active {
    transform: translateX(0%);
  }

  .hamburger {
    display: inline-block;
  }
  .navbar__logo {
    margin: 0 0 0 10px;
    height: 90px;
    width: 154px;
  }
  .navbar__navitem_blue {
    justify-content: center;
    width: 100%;
    height: 10%;
  }
}
@include for-tablet-portrait {
  .navbar__navlist {
    @include mobile-navbar;
  }
  .navbar__navlist_active {
    transform: translateX(0%);
  }
  .navbar__logo {
    margin: 0 0 0 10px;
    height: 96px;
    width: 165px;
  }
  .navbar__navitem_blue {
    justify-content: center;
    width: 100%;
    height: 10%;
  }
  .hamburger {
    display: inline-block;
  }
}

@include for-tablet-landscape {
  .navbar__navlist {
    width: 65%;
  }
}

@include for-desktop {
  .navbar__logo {
    transform: scale(0.8);
  }
}

